--- a/HW/HW-6.tex
+++ b/HW/HW-6.tex
@@ -57,30 +57,30 @@
 \begin{question}[Laplace random variable]
     Let X have the PDF
     \begin{align}
-        f_{X}(x) = \frac{\lambda}{2}e^{-\lambda|x|}
+        f_{X}(x) = \frac{\lambda}{2}\e^{-\lambda|x|}
     \end{align}
     where $\lambda$ is a positive scalar. Verify that $f_X$ satisfies the normalization condition, and evaluate the mean and variance of $X$.
 \end{question}
 \begin{answer}
     \begin{align}
     &\begin{aligned}
-        \int_{-\infty}^{+\infty}f_{X}(x)dx &= \int_{-\infty}^{+\infty}\frac{\lambda}{2}e^{-\lambda|x|}dx \\
-        &= \int_{-\infty}^{0}\frac{\lambda}{2}e^{\lambda x}dx + \int_{0}^{+\infty}\frac{\lambda}{2}e^{-\lambda x}dx \\
+        \int_{-\infty}^{+\infty}f_{X}(x)dx &= \int_{-\infty}^{+\infty}\frac{\lambda}{2}\e^{-\lambda|x|}dx \\
+        &= \int_{-\infty}^{0}\frac{\lambda}{2}\e^{\lambda x}dx + \int_{0}^{+\infty}\frac{\lambda}{2}\e^{-\lambda x}dx \\
         &= \frac{\lambda}{2}\left(\frac{1}{\lambda} - 0 - 0 + \frac{1}{\lambda}\right) \\
         &= 1
     \end{aligned} \\ 
     &\begin{aligned}
         \mathbf{E}[X] &= \frac{\lambda}{2}\int_{-\infty}^{0}xe^{\lambda x}dx + \frac{\lambda}{2}\int_{0}^{+\infty}xe^{-\lambda x}dx \\
-        &= \frac{\lambda}{2}\cdot\frac{1}{\lambda}\left(\left(xe^{\lambda x}\Big|_{-\infty}^{0} - \int_{-\infty}^{0}e^{\lambda x}\dd{x}\right) - \left(xe^{-\lambda x}\Big|_{0}^{+\infty} - \int_{0}^{+\infty}e^{-\lambda x}\dd{x}\right)\right) \\ 
+        &= \frac{\lambda}{2}\cdot\frac{1}{\lambda}\left(\left(xe^{\lambda x}\Big|_{-\infty}^{0} - \int_{-\infty}^{0}\e^{\lambda x}\dd{x}\right) - \left(xe^{-\lambda x}\Big|_{0}^{+\infty} - \int_{0}^{+\infty}\e^{-\lambda x}\dd{x}\right)\right) \\ 
         &= \frac{1}{2} \cdot \frac{-1 + 0 - 0 + 1}{\lambda} \\
         &= 0
     \end{aligned} \\ 
     &\begin{aligned}
         \text{var}(X) &= \mathbf{E}[X^2] - (\mathbf{E}[X])^2 \\
         &= \int_{-\infty}^{+\infty}x^2f_{X}(x)dx - 0 \\ 
-        &= \left(\int_{-\infty}^{0}x^2\frac{\lambda}{2}e^{\lambda x}dx + \int_{0}^{+\infty}x^2\frac{\lambda}{2}e^{-\lambda x}dx\right) \\
+        &= \left(\int_{-\infty}^{0}x^2\frac{\lambda}{2}\e^{\lambda x}dx + \int_{0}^{+\infty}x^2\frac{\lambda}{2}\e^{-\lambda x}dx\right) \\
         &= \frac{\lambda}{2}\cdot\frac{1}{\lambda} \left(\left(x^2e^{\lambda x}\Big|_{-\infty}^{0} - \int_{-\infty}^{0}2xe^{\lambda x}\dd{x}\right) - \left(x^2e^{\lambda x} - \int_{0}^{+\infty}2xe^{-\lambda x}\dd{x}\right)\right) \\
-        &= \frac{1}{2} \cdot \frac{1}{\lambda} \left(\left(-2xe^{\lambda x}\Big|_{-\infty}^{0} + 2\int_{-\infty}^{0}e^{\lambda x}\dd{x}\right) - \left(2xe^{-\lambda x}\Big|_{0}^{+\infty} - 2\int_{0}^{+\infty}e^{-\lambda x}\dd{x}\right)\right) \\
+        &= \frac{1}{2} \cdot \frac{1}{\lambda} \left(\left(-2xe^{\lambda x}\Big|_{-\infty}^{0} + 2\int_{-\infty}^{0}\e^{\lambda x}\dd{x}\right) - \left(2xe^{-\lambda x}\Big|_{0}^{+\infty} - 2\int_{0}^{+\infty}\e^{-\lambda x}\dd{x}\right)\right) \\
         &= \frac{1}{\lambda^2} \left(1 - 0 - 0 + 1\right) = \frac{2}{\lambda^2}
     \end{aligned}
     \end{align}
@@ -141,16 +141,16 @@
         \begin{equation}
             f_{X}(x) = \left\{
             \begin{aligned}
-                &\lambda e^{-\lambda x_0}, \quad &x = 0 \\ 
-                &\lambda e^{-\lambda (x_0 - x)} + \lambda e^{-\lambda (x_0 + x)}, \quad &0 < x < x_0 \\
-                &\lambda e^{-\lambda (x_0 + x)}, \quad &x \geq x_0
+                &\lambda \e^{-\lambda x_0}, \quad &x = 0 \\ 
+                &\lambda \e^{-\lambda (x_0 - x)} + \lambda \e^{-\lambda (x_0 + x)}, \quad &0 < x < x_0 \\
+                &\lambda \e^{-\lambda (x_0 + x)}, \quad &x \geq x_0
             \end{aligned}\right.
         \end{equation}
         Therefore, the expected distance from the fire is
         \begin{equation}
         \begin{aligned}
-            \mathbf{E}[X] &= \int_{0}^{x_0}x\lambda e^{-\lambda (x_0 - x)}\dd{x} + \int_{0}^{+\infty}x\lambda e^{-\lambda (x_0 + x)}\dd{x} \\ 
-            &= \lambda \cdot \frac{1}{\lambda} \left(x_0 - 0 + \frac{1 - e^{-\lambda x_0}}{\lambda}\right) - \lambda \cdot \frac{1}{\lambda} \left(0 - 0 + \frac{0 - e^{-\lambda x_0}}{\lambda}\right) \\ 
+            \mathbf{E}[X] &= \int_{0}^{x_0}x\lambda \e^{-\lambda (x_0 - x)}\dd{x} + \int_{0}^{+\infty}x\lambda \e^{-\lambda (x_0 + x)}\dd{x} \\ 
+            &= \lambda \cdot \frac{1}{\lambda} \left(x_0 - 0 + \frac{1 - \e^{-\lambda x_0}}{\lambda}\right) - \lambda \cdot \frac{1}{\lambda} \left(0 - 0 + \frac{0 - \e^{-\lambda x_0}}{\lambda}\right) \\ 
             &= x_0 + \frac{1}{\lambda}
         \end{aligned}
         \end{equation}
@@ -160,12 +160,12 @@
 
 \begin{question}
     Show that $\Gamma\left(\frac{1}{2}\right) = \sqrt{\pi}$ \\ 
-    \textit{Hint:} $\Gamma(t) = \int_{0}^{+\infty}e^{-x}x^{t-1}\dd{x}$. Make the change of variables and then relate the resulting expression to the normal distribution.
+    \textit{Hint:} $\Gamma(t) = \int_{0}^{+\infty}\e^{-x}x^{t-1}\dd{x}$. Make the change of variables and then relate the resulting expression to the normal distribution.
 \end{question}
 \begin{answer} ~
     \begin{equation}
     \begin{aligned}
-        \Gamma\left(\frac{1}{2}\right) &= \int_{0}^{+\infty} \frac{e^{-x}}{\sqrt{x}}\dd{x} = \int_{0}^{+\infty} \frac{e^{-u^2}}{u} \cdot 2u\dd{u} = \int_{-\infty}^{+\infty}e^{-u^2}\dd{u} = \sqrt{\pi}
+        \Gamma\left(\frac{1}{2}\right) &= \int_{0}^{+\infty} \frac{\e^{-x}}{\sqrt{x}}\dd{x} = \int_{0}^{+\infty} \frac{\e^{-u^2}}{u} \cdot 2u\dd{u} = \int_{-\infty}^{+\infty}\e^{-u^2}\dd{u} = \sqrt{\pi}
     \end{aligned}
     \end{equation}
 \end{answer}
@@ -181,7 +181,7 @@
     The CDF of $X$ is piecewise constant, so $X$ is a discrete RV, and 
     \begin{equation}
     \begin{aligned}
-        \mathbf{P}(|X| \leq 3) &= \sum_{x=-3}^{3}p_{X}(x) = F_{X}(3) - F_{X}(-4) = \frac{1}{1 + e^{-3}} - \frac{1}{1 + e^{4}}
+        \mathbf{P}(|X| \leq 3) &= \sum_{x=-3}^{3}p_{X}(x) = F_{X}(3) - F_{X}(-4) = \frac{1}{1 + \e^{-3}} - \frac{1}{1 + \e^{4}}
     \end{aligned}
     \end{equation}
 \end{answer}
