--- a/Probability-Notes.tex
+++ b/Probability-Notes.tex
@@ -5,6 +5,8 @@
 \usepackage{extarrows}
 \usepackage{physics}
 
+\input{math_cmds.tex}
+
 \definecolor{pgcolor}{RGB}{251, 250, 248}
 \pagecolor{pgcolor}
 \numberwithin{equation}{section}
@@ -117,11 +119,11 @@ We've already known the Distribution of a RV $X$ and we want to find the distrib
 \begin{example}[CDF and PDF of Normal Distribution]
     The PDF of standard normal distribution is
     \begin{equation}
-        f_{X}(x) = \frac{1}{\sqrt{2\pi}} e^{-\frac{x^2}{2}}
+        f_{X}(x) = \frac{1}{\sqrt{2\pi}} \e^{-\frac{x^2}{2}}
     \end{equation}
     whose CDF cannot be expressed in closed form and is defined as
     \begin{equation}
-        \Phi(x) = \frac{1}{\sqrt{2\pi}} \int_{-\infty}^{x} e^{-\frac{t^2}{2}} \dd{t}
+        \Phi(x) = \frac{1}{\sqrt{2\pi}} \int_{-\infty}^{x} \e^{-\frac{t^2}{2}} \dd{t}
     \end{equation}
     Now, a RV $Y$ is normally distributed with parameters $\mu$ and $\sigma^2$. Let $Z = \frac{Y - \mu}{\sigma}$, then $Z$ is standard normal distributed. The CDF of $Y$ is
     \begin{equation}
@@ -129,7 +131,7 @@ We've already known the Distribution of a RV $X$ and we want to find the distrib
     \end{equation}
     And the PDF of $Y$ is
     \begin{equation}
-        f_{Y}(y) = \dv{F_{Y}}{y} = \dv{\Phi\left(\frac{y - \mu}{\sigma}\right)}{y} = \frac{1}{\sigma} \Phi'\left(\frac{y - \mu}{\sigma}\right) = \frac{1}{\sigma} f_{Z}\left(\frac{y - \mu}{\sigma}\right) = \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{(y - \mu)^2}{2\sigma^2}}
+        f_{Y}(y) = \dv{F_{Y}}{y} = \dv{\Phi\left(\frac{y - \mu}{\sigma}\right)}{y} = \frac{1}{\sigma} \Phi'\left(\frac{y - \mu}{\sigma}\right) = \frac{1}{\sigma} f_{Z}\left(\frac{y - \mu}{\sigma}\right) = \frac{1}{\sqrt{2\pi}\sigma} \e^{-\frac{(y - \mu)^2}{2\sigma^2}}
     \end{equation}
 \end{example}
 
@@ -171,7 +173,7 @@ For monotonic functions $g(x)$
         \item The entropy describes the uncertainty of a random experiment.
         \item The base of the logarithm can be different, which is equal to multiplying by a constant. \begin{itemize}
             \item If the base is 2, the unit is bit.
-            \item If the base is $e$, the unit is nat.
+            \item If the base is $\e$, the unit is nat.
         \end{itemize}
     \end{itemize}
 \end{remark}
