fix bug: HW-6 compile error

--- a/HW/HW-6.tex
+++ b/HW/HW-6.tex
@@ -20,6 +20,8 @@
 \usepackage{enumitem}
 \usepackage{physics}
 
+\input{math_cmds.tex}
+
 \theoremstyle{definition}% default
 \newtheorem{question}{Question} %
 \theoremstyle{plain}% 
